[FEAT] Implement some SQL queries

--- a/main/templates/dashboard.html
+++ b/main/templates/dashboard.html
@@ -16,7 +16,7 @@
     var userData = {
         name: "Ayam Pargoy",
         email: "user1@mail.com",
-        role: ["Pengguna Biasa"],
+        role: ["Podcaster"],
         contact: "081238792422",
         city: "Jakarta",
         gender: "Laki Laki",
