--- a/red/templates/list_album.html
+++ b/red/templates/list_album.html
@@ -24,10 +24,10 @@
         <tbody>
           {% for album in albums %}
             <tr>
-              <td>{{ album.judul }}</td>
-              <td>{{ album.label }}</td>
-              <td>{{ album.jumlah_lagu }}</td>
-              <td>{{ album.total_durasi }}</td>
+              <td>{{ album.0 }}</td>
+              <td>{{ album.1 }}</td>
+              <td>{{ album.2 }}</td>
+              <td>{{ album.3 }}</td>
               <td>
                 <a href="/red/list_song" class="btn btn-primary btn-sm">Lihat Daftar Lagu</a>
                 <a href="/red/create_lagu" class="btn btn-success btn-sm">Tambah Lagu</a>
@@ -51,9 +51,9 @@
         <tbody>
           {% for album in albums %}
             <tr>
-              <td>{{ album.judul }}</td>
-              <td>{{ album.jumlah_lagu }}</td>
-              <td>{{ album.total_durasi }}</td>
+              <td>{{ album.0 }}</td>
+              <td>{{ album.1 }}</td>
+              <td>{{ album.2 }}</td>
               <td>
                 <a href="/red/list_song" class="btn btn-primary btn-sm">Lihat Daftar Lagu</a>
                 <a href="" class="btn btn-danger btn-sm">Hapus</a>
