--- a/templates/base.html
+++ b/templates/base.html
@@ -46,9 +46,15 @@
       // Temporary User Data
       const user = {
         isLoggedIn: true,
-        role: 'Pengguna Biasa',
+        role: 'Artist',
         isPremium: false
       }
+
+      {% comment %} const user = {
+        isLoggedIn: {{ user.isLoggedIn| default:"false" }},
+        role: {{ user.role | default:"" }},
+        isPremium: {{ user.isPremium | default:"false" }}
+      }; {% endcomment %}
       
       const navbarLinks = document.getElementById('navbarLinks')
       
@@ -56,7 +62,7 @@
         let links = []
       
         if (user.isLoggedIn) {
-          links.push('<li class="nav-item"><a class="nav-link" href="../dashboard/">Dashboard</a></li>')
+          links.push('<li class="nav-item"><a class="nav-link" href="/dashboard/">Dashboard</a></li>')
           links.push('<li class="nav-item"><a class="nav-link" href="#">Chart</a></li>')
           links.push('<li class="nav-item"><a class="nav-link" href="#">Kelola Playlist</a></li>')
       
@@ -67,13 +73,13 @@
             links.push('<li class="nav-item"><a class="nav-link" href="#">Kelola Podcast</a></li>')
           }
           if (user.role === 'Artist' || user.role === 'Songwriter') {
-            links.push('<li class="nav-item"><a class="nav-link" href="#">Kelola Album & Songs</a></li>')
+            links.push('<li class="nav-item"><a class="nav-link" href="/red/list_album">Kelola Album & Songs</a></li>')
           }
           if (user.role === 'Label') {
-            links.push('<li class="nav-item"><a class="nav-link" href="#">Kelola Album</a></li>')
+            links.push('<li class="nav-item"><a class="nav-link" href="/red/list_album">Kelola Album</a></li>')
           }
           if (user.role === 'Artist' || user.role === 'Songwriter' || user.role === 'Label') {
-            links.push('<li class="nav-item"><a class="nav-link" href="#">Cek Royalti</a></li>')
+            links.push('<li class="nav-item"><a class="nav-link" href="/red/list_royalti">Cek Royalti</a></li>')
           }
           if (user.isPremium) {
             links.push('<li class="nav-item"><a class="nav-link" href="#">Kelola Downloaded Songs</a></li>')
@@ -86,10 +92,10 @@
               </form>
             </li>`
           )
-          links.push('<li class="nav-item"><a class="nav-link" href="../">Logout</a></li>')
+          links.push('<li class="nav-item"><a class="nav-link" href="/">Logout</a></li>')
         } else {
           links.push('<li class="nav-item"><a class="nav-link" href="/login">Login</a></li>')
-          links.push('<li class="nav-item"><a class="nav-link" href="#">Registrasi</a></li>')
+          links.push('<li class="nav-item"><a class="nav-link" href="/register">Registrasi</a></li>')
         }
       
         navbarLinks.innerHTML = links.join('')
