[FEAT] Implement login

--- a/main/templates/dashboard.html
+++ b/main/templates/dashboard.html
@@ -14,14 +14,15 @@
 <script>
     // Dummy data
     var userData = {
-        name: "Ayam Pargoy",
-        email: "user1@mail.com",
-        role: ["Podcaster"],
-        contact: "081238792422",
-        city: "Jakarta",
-        gender: "Laki Laki",
-        birthplace: "Lampung",
-        birthdate: "1969-12-11"
+        nama: "{{ user.nama }}",
+        email: "{{ user.email }}",
+        status_langganan: "{{ user.status_langganan }}",
+        roles: "{{ roles }}",
+        kontak: "{{ user.kontak }}",
+        kota_asal: "{{ user.kota_asal }}",
+        gender: "{{ user.gender }}",
+        tempat_lahir: "{{ user.tempat_lahir }}",
+        tanggal_lahir: "{{ user.tanggal_lahir }}"
     };
 
     function displayUserInfo() {
@@ -29,7 +30,7 @@
             <table class="table">
                 <tr>
                     <td><strong>Nama:</strong></td>
-                    <td>${userData.name}</td>
+                    <td>${userData.nama}</td>
                 </tr>
                 <tr>
                     <td><strong>Email:</strong></td>
@@ -37,34 +38,37 @@
                 </tr>
         `;
 
-        if (userData.role.includes("Label")) {
+        if (userData.roles.includes("label")) {
             userInfoHTML += `
                 <tr>
                     <td><strong>Kontak:</strong></td>
-                    <td>${userData.contact}</td>
+                    <td>${userData.kontak}</td>
                 </tr>
             `;
         } else {
             userInfoHTML += `
                 <tr>
+                    <td><strong>Status Langganan:</strong></td>
+                    <td>${userData.status_langganan}</td>
+                <tr>
                     <td><strong>Kota Asal:</strong></td>
-                    <td>${userData.city}</td>
+                    <td>${userData.kota_asal}</td>
                 </tr>
                 <tr>
                     <td><strong>Gender:</strong></td>
-                    <td>${userData.gender}</td>
+                    <td>${userData.gender === '0' ? 'Perempuan' : 'Laki-Laki'}</td>
                 </tr>
                 <tr>
                     <td><strong>Tempat Lahir:</strong></td>
-                    <td>${userData.birthplace}</td>
+                    <td>${userData.tempat_lahir}</td>
                 </tr>
                 <tr>
                     <td><strong>Tanggal Lahir:</strong></td>
-                    <td>${userData.birthdate}</td>
+                    <td>${userData.tanggal_lahir}</td>
                 </tr>
                 <tr>
-                    <td><strong>Role:</strong></td>
-                    <td>${userData.role.join(', ')}</td>
+                    <td><strong>Roles:</strong></td>
+                    <td>{% for role in roles %} {{ role }} {% if not forloop.last %}, {% endif %}{% endfor %}</td>
                 </tr>
             `;
         }
@@ -79,10 +83,10 @@
         var additionalInfoHTML = "";
 
         // Check if the user has multiple roles
-        var hasMultipleRoles = userData.role.length > 1;
+        var hasMultipleRoles = userData.roles.length > 1;
 
         // Additional info based on role
-        if (userData.role.includes("Pengguna Biasa")) {
+        if (userData.roles.includes("Pengguna Biasa")) {
             additionalInfoHTML += "<h3 class='mt-4 fw-bold'>Playlist</h3>";
             // Dummy playlist data
             var playlists = ["Playlist 1", "Playlist 2", "Playlist 3", "Playlist 4", "Playlist 5", "Playlist 6", "Playlist 7", "Playlist 8", "Playlist 9", "Playlist 10", "Playlist 11", "Playlist 12", "Playlist 13", "Playlist 14", "Playlist 15", "Playlist 16", "Playlist 17", "Playlist 18", "Playlist 19", "Playlist 20"];
@@ -103,7 +107,7 @@
                 });
                 additionalInfoHTML += "</div>";
             }
-        } else if (userData.role.includes("Artist") || userData.role.includes("Songwriter")) {
+        } else if (userData.roles.includes("Artist") || userData.roles.includes("Songwriter")) {
             additionalInfoHTML += "<h3 class='mt-4 fw-bold'>Lagu</h3>";
             // Dummy song data
             var songs = ["Song 1", "Song 2", "Song 3"];
@@ -124,7 +128,7 @@
                 });
                 additionalInfoHTML += "</div>";
             }
-        } else if (userData.role.includes("Podcaster")) {
+        } else if (userData.roles.includes("Podcaster")) {
             additionalInfoHTML += "<h3 class='mt-4 fw-bold'>Podcast</h3>";
             // Dummy podcast data
             var podcasts = ["Podcast 1", "Podcast 2", "Podcast 3"];
@@ -145,7 +149,7 @@
                 });
                 additionalInfoHTML += "</div>";
             }
-        } else if (userData.role.includes("Label")) {
+        } else if (userData.roles.includes("Label")) {
             additionalInfoHTML += "<h3 class='mt-4 fw-bold'>Album</h3>";
             // Dummy album data
             var albums = [];
