[FEAT] Implement navigation bar

--- a/main/templates/dashboard.html
+++ b/main/templates/dashboard.html
@@ -12,21 +12,45 @@
 </div>
 
 <script>
-    // Dummy data
+    var roles = "{{ roles }}";
+
     var userData = {
         nama: "{{ user.nama }}",
         email: "{{ user.email }}",
         status_langganan: "{{ user.status_langganan }}",
-        roles: "{{ roles }}",
-        kontak: "{{ user.kontak }}",
         kota_asal: "{{ user.kota_asal }}",
         gender: "{{ user.gender }}",
         tempat_lahir: "{{ user.tempat_lahir }}",
         tanggal_lahir: "{{ user.tanggal_lahir }}"
     };
 
-    function displayUserInfo() {
-        var userInfoHTML = `
+    var labelData = {
+        nama: "{{ label.nama }}",
+        email: "{{ label.email }}",
+        kontak: "{{ label.kontak }}"
+    };
+
+    function displayInfo() {
+        var userInfoHTML = ``;
+
+        if (roles.includes("Label")) {
+            userInfoHTML += `
+            <table class="table">
+                <tr>
+                    <td><strong>Nama:</strong></td>
+                    <td>${labelData.nama}</td>
+                </tr>
+                <tr>
+                    <td><strong>Email:</strong></td>
+                    <td>${labelData.email}</td>
+                </tr>
+                <tr>
+                    <td><strong>Kontak:</strong></td>
+                    <td>${labelData.kontak}</td>
+                </tr>
+            `;
+        } else {
+            userInfoHTML += `
             <table class="table">
                 <tr>
                     <td><strong>Nama:</strong></td>
@@ -36,17 +60,6 @@
                     <td><strong>Email:</strong></td>
                     <td>${userData.email}</td>
                 </tr>
-        `;
-
-        if (userData.roles.includes("label")) {
-            userInfoHTML += `
-                <tr>
-                    <td><strong>Kontak:</strong></td>
-                    <td>${userData.kontak}</td>
-                </tr>
-            `;
-        } else {
-            userInfoHTML += `
                 <tr>
                     <td><strong>Status Langganan:</strong></td>
                     <td>${userData.status_langganan}</td>
@@ -83,10 +96,10 @@
         var additionalInfoHTML = "";
 
         // Check if the user has multiple roles
-        var hasMultipleRoles = userData.roles.length > 1;
+        var hasMultipleRoles = roles.length > 1;
 
         // Additional info based on role
-        if (userData.roles.includes("Pengguna Biasa")) {
+        if (roles.includes("Pengguna Biasa")) {
             additionalInfoHTML += "<h3 class='mt-4 fw-bold'>Playlist</h3>";
             // Dummy playlist data
             var playlists = ["Playlist 1", "Playlist 2", "Playlist 3", "Playlist 4", "Playlist 5", "Playlist 6", "Playlist 7", "Playlist 8", "Playlist 9", "Playlist 10", "Playlist 11", "Playlist 12", "Playlist 13", "Playlist 14", "Playlist 15", "Playlist 16", "Playlist 17", "Playlist 18", "Playlist 19", "Playlist 20"];
@@ -107,7 +120,7 @@
                 });
                 additionalInfoHTML += "</div>";
             }
-        } else if (userData.roles.includes("Artist") || userData.roles.includes("Songwriter")) {
+        } else if (roles.includes("Artist") || roles.includes("Songwriter")) {
             additionalInfoHTML += "<h3 class='mt-4 fw-bold'>Lagu</h3>";
             // Dummy song data
             var songs = ["Song 1", "Song 2", "Song 3"];
@@ -128,7 +141,7 @@
                 });
                 additionalInfoHTML += "</div>";
             }
-        } else if (userData.roles.includes("Podcaster")) {
+        } else if (roles.includes("Podcaster")) {
             additionalInfoHTML += "<h3 class='mt-4 fw-bold'>Podcast</h3>";
             // Dummy podcast data
             var podcasts = ["Podcast 1", "Podcast 2", "Podcast 3"];
@@ -149,7 +162,7 @@
                 });
                 additionalInfoHTML += "</div>";
             }
-        } else if (userData.roles.includes("Label")) {
+        } else if (roles.includes("Label")) {
             additionalInfoHTML += "<h3 class='mt-4 fw-bold'>Album</h3>";
             // Dummy album data
             var albums = [];
@@ -176,7 +189,7 @@
     }
 
     // Display user information and additional info based on role
-    displayUserInfo();
+    displayInfo();
     displayAdditionalInfo();
 </script>
 
