--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -17,8 +17,10 @@
           <cite title="Source Title">Anonymous</cite>
         </figcaption>
       </figure>
-      <a href="/login" class="btn btn-primary m-2">Login</a>
-      <a href="/register" class="btn btn-primary m-2">Register</a>
+      {% if request.session.roles|length == 0 %}
+        <a href="/login" class="btn btn-primary m-2">Login</a>
+        <a href="/register" class="btn btn-primary m-2">Register</a>
+      {% endif %}
     </div>
   </header>
 {% endblock %}
