--- a/templates/base.html
+++ b/templates/base.html
@@ -43,46 +43,40 @@
     <br>
 
     <script>
-      // Temporary User Data
-      const user = {
-        isLoggedIn: true,
-        role: 'Artist',
-        isPremium: false
-      }
-
-      {% comment %} const user = {
-        isLoggedIn: {{ user.isLoggedIn| default:"false" }},
-        role: {{ user.role | default:"" }},
-        isPremium: {{ user.isPremium | default:"false" }}
-      }; {% endcomment %}
+      const isLoggedIn = {% if request.session.email %}true{% else %}false{% endif %};
+      const isPremium = ({{ request.session.user|default_if_none:""|safe }}[0].status_langganan === "Premium");
+      const role = {{ request.session.roles|default_if_none:""|safe }};
       
       const navbarLinks = document.getElementById('navbarLinks')
       
       function setupNavbar() {
         let links = []
-      
-        if (user.isLoggedIn) {
+        
+        console.log(isLoggedIn)
+        
+        if (isLoggedIn) {
+
           links.push('<li class="nav-item"><a class="nav-link" href="/dashboard/">Dashboard</a></li>')
           links.push('<li class="nav-item"><a class="nav-link" href="#">Chart</a></li>')
           links.push('<li class="nav-item"><a class="nav-link" href="#">Kelola Playlist</a></li>')
       
-          if (!user.isPremium) {
-            links.push('<li class="nav-item"><a class="nav-link" href="#">Langganan Paket</a></li>')
+          if (isPremium) {
+            links.push('<li class="nav-item"><a class="nav-link" href="#">Langganan Paket</a></li>');
           }
-          if (user.role === 'Podcaster') {
-            links.push('<li class="nav-item"><a class="nav-link" href="#">Kelola Podcast</a></li>')
+          if (role.includes('Podcaster')) {
+            links.push('<li class="nav-item"><a class="nav-link" href="#">Kelola Podcast</a></li>');
           }
-          if (user.role === 'Artist' || user.role === 'Songwriter') {
-            links.push('<li class="nav-item"><a class="nav-link" href="/red/list_album">Kelola Album & Songs</a></li>')
+          if (role.includes('Artist') || role.includes('Songwriter')) {
+            links.push('<li class="nav-item"><a class="nav-link" href="/red/list_album">Kelola Album & Songs</a></li>');
           }
-          if (user.role === 'Label') {
-            links.push('<li class="nav-item"><a class="nav-link" href="/red/list_album">Kelola Album</a></li>')
+          if (role.includes('Label')) {
+            links.push('<li class="nav-item"><a class="nav-link" href="/red/list_album">Kelola Album</a></li>');
           }
-          if (user.role === 'Artist' || user.role === 'Songwriter' || user.role === 'Label') {
-            links.push('<li class="nav-item"><a class="nav-link" href="/red/list_royalti">Cek Royalti</a></li>')
+          if (role.includes('Artist') || role.includes('Songwriter') || role.includes('Label')) {
+            links.push('<li class="nav-item"><a class="nav-link" href="/red/list_royalti">Cek Royalti</a></li>');
           }
-          if (user.isPremium) {
-            links.push('<li class="nav-item"><a class="nav-link" href="#">Kelola Downloaded Songs</a></li>')
+          if (isPremium) {
+            links.push('<li class="nav-item"><a class="nav-link" href="#">Kelola Downloaded Songs</a></li>');
           }
           links.push(
             `<li class="nav-item">
@@ -92,7 +86,7 @@
               </form>
             </li>`
           )
-          links.push('<li class="nav-item"><a class="nav-link" href="/">Logout</a></li>')
+          links.push('<li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>')
         } else {
           links.push('<li class="nav-item"><a class="nav-link" href="/login">Login</a></li>')
           links.push('<li class="nav-item"><a class="nav-link" href="/register">Registrasi</a></li>')
