--- a/red/templates/list_royalti.html
+++ b/red/templates/list_royalti.html
@@ -20,11 +20,11 @@
       <tbody>
         {% for royalty in royalties %}
           <tr>
-            <td>{{ royalty.judul_lagu }}</td>
-            <td>{{ royalty.judul_album }}</td>
-            <td>{{ royalty.total_play }}</td>
-            <td>{{ royalty.total_download }}</td>
-            <td>{{ royalty.total_royalti }}</td>
+            <td>{{ royalty.0 }}</td>
+            <td>{{ royalty.1 }}</td>
+            <td>{{ royalty.2 }}</td>
+            <td>{{ royalty.3 }}</td>
+            <td>{{ royalty.4 }}</td>
           </tr>
         {% endfor %}
       </tbody>
