--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
             
               if (user.isLoggedIn) {
                 links.push('<li class="nav-item"><a class="nav-link" href="#">Dashboard</a></li>')
-                links.push('<li class="nav-item"><a class="nav-link" href="#">Chart</a></li>')
+                links.push('<li class="nav-item"><a class="nav-link" href="biru/">Chart</a></li>')
                 links.push('<li class="nav-item"><a class="nav-link" href="#">Search Bar</a></li>')
                 links.push('<li class="nav-item"><a class="nav-link" href="#">Kelola Playlist</a></li>')
                 
