--- a/yellow/templates/downloaded_songs.html
+++ b/yellow/templates/downloaded_songs.html
@@ -46,7 +46,7 @@
             </tbody>
         </table>
         <div class="container justify-content-center d-flex">
-            <button class="btn" style="width: 20%; margin-top: 5%;">Back</button>
+            <a class="btn" style="width: 20%; margin-top: 5%;" href="/dashboard">Back</a>
         </div>
       {% else %}
       Anda belum mengunduh lagu
