--- a/yellow/templates/langganan_paket.html
+++ b/yellow/templates/langganan_paket.html
@@ -39,7 +39,7 @@
     </div>
 </div>
 
-<script>
+<!-- <script>
     document.getElementById('langgananPaketForm').addEventListener('submit', function(event) {
         var selectedOption = document.getElementById('jenis_paket').selectedOptions[0];
         var harga = selectedOption.getAttribute('data-harga');
@@ -48,5 +48,5 @@
         document.getElementById('harga_paket').value = harga;
         document.getElementById('jenis_paket_text').value = jenis;
     });
-</script>
+</script> -->
 {% endblock %}
