--- a/biru/templates/chart.html
+++ b/biru/templates/chart.html
@@ -14,14 +14,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <!-- <li class="nav-item">
-                    <a class="nav-link text-white" href="register.html">Register</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="login.html">Login</a>
-                </li> -->
-
-                <!-- These links are only visible to logged in users -->
                 <li class="nav-item">
                     <a class="nav-link text-white" href="dashboard.html">Dashboard</a>
                 </li>
@@ -32,13 +24,10 @@
                     <a class="nav-link text-white" href="userplaylist.html">Playlist</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="subscribe.html">Subscribe</a>
-                </li>
-                    <a class="nav-link text-white" href="#">Logout</a>
-                </li>
+                    <a class="nav-link text-white" href="subscribe.html">Subscribe</a></li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Logout</a></li>
             </ul>
-        
-            <!-- Search bar -->
             <form class="form-inline ml-auto my-2 my-lg-0 justify-content-end">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
@@ -49,7 +38,6 @@
                 </button>
             </form>
         </div>
-        
     </nav>
 
     <div class="container mt-5 mb-5">
@@ -70,11 +58,11 @@
                             <tbody>
                                 <tr>
                                     <td>Daily Top 20</td>
-                                    <td><a href="chartdetail.html" class="btn btn-primary">Lihat Daftar Lagu</a></td>
+                                    <td><a href="{% url 'get_chart_details' %}" class="btn btn-primary">Lihat Daftar Lagu</a></td>
                                 </tr>
                                 <tr>
                                     <td>Weekly Top 20</td>
-                                    <td><a href="chartdetail.html" class="btn btn-primary">Lihat Daftar Lagu</a></td>
+                                    <td><a href="{% url 'get_chart_details_weekly' %}" class="btn btn-primary">Lihat Daftar Lagu</a></td>
                                 </tr>
                                 <!-- Add more rows as needed -->
                             </tbody>
@@ -86,10 +74,6 @@
         </div>
     </div>
     
-    
-
-    
-
     <footer class="footer mt-auto py-3 bg-success">
         <div class="container-fluid">
             <span class="text-white">© 2024 Marmut. All rights reserved.</span>
