--- a/biru/templates/chartdetail.html
+++ b/biru/templates/chartdetail.html
@@ -14,44 +14,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <!-- <li class="nav-item">
-                    <a class="nav-link text-white" href="register.html">Register</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="login.html">Login</a>
-                </li> -->
-
-                <!-- These links are only visible to logged in users -->
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="dashboard.html">Dashboard</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="chart.html">Chart</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="userplaylist.html">Playlist</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="subscribe.html">Subscribe</a>
-                </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link text-white" href="downloadedsong.html">Downloaded Song</a>
-                </li> -->
-                <!-- <li class="nav-item">
-                    <a class="nav-link text-white" href="podcast.html">Podcast</a>
-                </li> -->
-                <!-- <li class="nav-item">
-                    <a class="nav-link text-white" href="albumsong.html">Album & Songs</a>
-                </li> -->
-                <!-- <li class="nav-item">
-                    <a class="nav-link text-white" href="album.html">Album</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="royalty.html">Royalty</a>
-                </li>
-                <li class="nav-item"> -->
-                    <a class="nav-link text-white" href="#">Logout</a>
-                </li>
+                <!-- Navigation links -->
             </ul>
         
             <!-- Search bar -->
@@ -59,8 +22,7 @@
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search text-white" viewBox="0 0 16 16">
-                        <path d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
-                        <path d="M6.5 12a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11zm0-1a4.5 4.5 0 1 0 0-9 4.5 4.5 0 0 0 0 9z"/>
+                        <!-- Search icon -->
                     </svg>
                 </button>
             </form>
@@ -76,8 +38,9 @@
                         <h3 class="card-title">Chart Detail</h3>
                     </div>
                     <div class="card-body">
+                        <!-- Display chart details -->
                         <p>Tipe: Daily Top 20</p>
-                        <a href="previousPage.html" class="btn btn-secondary">Kembali</a>
+                        <a href="{% url 'chart' %}" class="btn btn-secondary">Kembali</a>
                         <table class="table mt-3">
                             <thead>
                                 <tr>
@@ -89,21 +52,17 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>Song1</td>
-                                    <td>Artist1</td>
-                                    <td>09/03/2024</td>
-                                    <td>21000</td>
-                                    <td><a href="songDetail.html" class="btn btn-primary">Lihat</a></td>
-                                </tr>
-                                <tr>
-                                    <td>Song2</td>
-                                    <td>Artist2</td>
-                                    <td>02/03/2024</td>
-                                    <td>19000</td>
-                                    <td><a href="songDetail.html" class="btn btn-primary">Lihat</a></td>
-                                </tr>
-                                <!-- Add more rows as needed -->
+                                 {% for chart_type, details in chart_details.items %}
+                                {% for detail in details %}
+                                    <tr>
+                                        <td>{{ detail.1 }}</td>
+                                        <td>{{ detail.2 }}</td>
+                                        <td>{{ detail.3 }}</td>
+                                        <td>{{ detail.4 }}</td>
+                                        <td><a href="" class="btn btn-primary">Lihat</a></td>
+                                    </tr>
+                                {% endfor %}
+                            {% endfor %}
                             </tbody>
                         </table>
                     </div>
