perbaiki pop up download

--- a/yellow/templates/downloaded_songs.html
+++ b/yellow/templates/downloaded_songs.html
@@ -54,6 +54,22 @@
     </div>
 </div>
 
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Berhasil</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+        </div>
+        <div class="modal-footer" style="justify-content: center;">
+          <button type="button" class="btn" data-bs-dismiss="modal" style="width: 20%;">Kembali</button>
+        </div>
+      </div>
+    </div>
+</div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
     $(document).ready(function(){
