--- a/yellow/templates/pembayaran.html
+++ b/yellow/templates/pembayaran.html
@@ -39,7 +39,7 @@
                 {% endfor %}
             </select>
             <div class="container justify-content-center d-flex">
-                <button type="submit" class="btn" style="width: 60%; margin-top: 10%;">Pay</button>
+                <button type="submit" class="btn" style="width: 60%; margin-top: 10%;">Bayar</button>
             </div>
         </form>
     </div>
