--- a/yellow/templates/riwayat_transaksi.html
+++ b/yellow/templates/riwayat_transaksi.html
@@ -40,7 +40,7 @@
         <p>Anda belum pernah berlangganan</p>
         {% endif %}
         <div class="container justify-content-center d-flex">
-            <a class="btn" style="width: 20%; margin-top: 5%;" href="{% url 'yellow:langganan_paket' %}">Back</a>
+            <a class="btn" style="width: 20%; margin-top: 5%;" href="{% url 'yellow:langganan_paket' %}">Kembali</a>
         </div>
     </div>
 </div>
