--- a/yellow/templates/pembayaran.html
+++ b/yellow/templates/pembayaran.html
@@ -2,44 +2,46 @@
 {% load static %}
 
 {% block meta %}
-
 {% endblock %}
+
 {% block content %}
-<div class="container justify-content-center d-flex"">
-    <div class="card">
+<div class="container mt-5">
+    <div class="card p-4 shadow-lg">
+        <div class="text-center mb-4">
+            <h2>PEMBAYARAN PAKET</h2>
+        </div>
         <form id="payment-form" method="post">
             {% csrf_token %}
-            <table class="" style="margin-bottom: 5%; border-color: black;">
-                <thead>
-                    <tr>
-                      <th scope="col" style="text-align: center;">PEMBAYARAN PAKET</th>
-                </thead>
-            </table>
-            <table class="table" style="margin-bottom: 5%;margin-top: 5%; border: 2px solid black;">
-                <thead>
-                    <tr>
-                        <th scope="col">Jenis</th>
-                        <th scope="col">Harga</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
+            <div class="table-responsive">
+                <table class="table table-striped table-bordered">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Jenis</th>
+                            <th scope="col">Harga</th>
+                        </tr>
+                    </thead>
+                    <tbody>
                         {% for item in paket %}
-                        <input type="hidden" name="jenis" value="{{ item.jenis }}">
-                        <td value="{{ item.jenis }}" name="jenis">{{ item.jenis }}</td>
-                        <td value="{{ item.harga }}" name="harga">{{ item.harga }}</td>
+                            <tr>
+                                <input type="hidden" name="jenis" value="{{ item.jenis }}">
+                                <td>{{ item.jenis }}</td>
+                                <td>{{ item.harga }}</td>
+                            </tr>
                         {% endfor %}
-                    <tr>
-                </tbody>
-            </table>
-            <select class="form-select"  name="metode_bayar" aria-label="Default select example" style="margin-top: 5%; width: 70%;">
-                <option selected disabled>Choose Payment Method</option>
-                {% for metode in metode_bayar %}
-                <option value="{{ metode }}">{{ metode }}</option>
-                {% endfor %}
-            </select>
-            <div class="container justify-content-center d-flex">
-                <button type="submit" class="btn" style="width: 60%; margin-top: 10%;">Bayar</button>
+                    </tbody>
+                </table>
+            </div>
+            <div class="form-group mt-4">
+                <label for="metode_bayar" class="form-label">Metode Pembayaran</label>
+                <select class="form-select" name="metode_bayar" aria-label="Default select example">
+                    <option selected disabled>Pilih Metode Pembayaran</option>
+                    {% for metode in metode_bayar %}
+                        <option value="{{ metode }}">{{ metode }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="text-center mt-4">
+                <button type="submit" class="btn btn-primary" style="width: 60%;">Bayar</button>
             </div>
         </form>
     </div>
@@ -47,16 +49,16 @@
 
 <!-- Modal -->
 <div class="modal fade" id="paymentModal" tabindex="-1" role="dialog" aria-labelledby="paymentModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="paymentModalLabel">Payment Status</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                <h5 class="modal-title" id="paymentModalLabel">Status Pembayaran</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" id="messageStatus">
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn" data-bs-dismiss="modal" id="closeModalButton">Close</button>
+            <div class="modal-footer justify-content-center">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="closeModalButton">Tutup</button>
             </div>
         </div>
     </div>
@@ -97,6 +99,6 @@
             });
         });
     });
-</script>    
+</script>
 
 {% endblock %}
