--- a/yellow/templates/riwayat_transaksi.html
+++ b/yellow/templates/riwayat_transaksi.html
@@ -2,45 +2,46 @@
 {% load static %}
 
 {% block meta %}
-
 {% endblock %}
+
 {% block content %}
-<div class="container justify-content-center d-flex"">
-    <div class="card">
-        <table class="" style="margin-bottom: 5%; border-color: black;">
-            <thead>
-                <tr>
-                  <th scope="col" style="text-align: center;">RIWAYAT TRANSAKSI PAKET</th>
-            </thead>
-        </table>
+<div class="container mt-5">
+    <div class="card p-4 shadow-lg">
+        <div class="text-center mb-4">
+            <h2>RIWAYAT TRANSAKSI PAKET</h2>
+        </div>
         {% if riwayat %}
-        <table class="table" style="margin-bottom: 5%;margin-top: 5%; border: 2px solid black;">
-            <thead>
-                <tr>
-                  <th scope="col">Jenis</th>
-                  <th scope="col">Tanggal Dimulai</th>
-                  <th scope="col">Tanggal Berakhir</th>
-                  <th scope="col">Metode Pembayaran</th>
-                  <th scope="col">Nominal</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for riwayat in riwayat %}
-                <tr>
-                    <td>{{ riwayat.jenis_paket }}</td>
-                    <td>{{ riwayat.timestamp_dimulai }}</td>
-                    <td>{{ riwayat.timestamp_berakhir }}</td>
-                    <td>{{ riwayat.metode_bayar }}</td>
-                    <td>{{ riwayat.nominal }}</td>
-                <tr>
-                {% endfor %}
-            </tbody>
-        </table>
+            <div class="table-responsive">
+                <table class="table table-striped table-bordered">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Jenis</th>
+                            <th scope="col">Tanggal Dimulai</th>
+                            <th scope="col">Tanggal Berakhir</th>
+                            <th scope="col">Metode Pembayaran</th>
+                            <th scope="col">Nominal</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for riwayat in riwayat %}
+                            <tr>
+                                <td>{{ riwayat.jenis_paket }}</td>
+                                <td>{{ riwayat.timestamp_dimulai }}</td>
+                                <td>{{ riwayat.timestamp_berakhir }}</td>
+                                <td>{{ riwayat.metode_bayar }}</td>
+                                <td>{{ riwayat.nominal }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         {% else %}
-        <p>Anda belum pernah berlangganan</p>
+            <div class="text-center">
+                <p>Anda belum pernah berlangganan</p>
+            </div>
         {% endif %}
-        <div class="container justify-content-center d-flex">
-            <a class="btn" style="width: 20%; margin-top: 5%;" href="{% url 'yellow:langganan_paket' %}">Kembali</a>
+        <div class="text-center mt-4">
+            <a class="btn btn-secondary" href="{% url 'yellow:langganan_paket' %}">Kembali</a>
         </div>
     </div>
 </div>
