--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,10 @@
         top: 0;
         width: 100%;
       }
+      .search-container {
+            display: flex;
+            align-items: center;
+        }
     </style>
   </head>
 
@@ -80,7 +84,7 @@
           }
           links.push(
             `<li class="nav-item">
-              <form action="{% url 'yellow:search' %}" method="get" class="flex items-center">
+              <form action="{% url 'yellow:search' %}" class="d-flex search-container">
                 <input class="form-control me-2" type="text" name="query" placeholder="Cari" aria-label="Search" name="q">
                 <button class="btn btn-outline-dark" type="submit"><i class="bi bi-search"></i></button>
               </form>
