--- a/yellow/templates/downloaded_songs.html
+++ b/yellow/templates/downloaded_songs.html
@@ -32,7 +32,7 @@
                                         <a class="btn btn-info me-2" href="#">Lihat</a>
                                         <form id="deleteSong{{ song.id }}" class="deleteSongForm" action="{% url 'yellow:delete_song' song.id song.email_downloader %}" method="post">
                                             {% csrf_token %}
-                                            <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                                            <button type="submit" class="btn btn-danger">
                                                 Hapus
                                             </button>
                                         </form>
