--- a/yellow/templates/search.html
+++ b/yellow/templates/search.html
@@ -29,7 +29,7 @@
                                     <td>{{ song.judul }}</td>
                                     <td>{{ song.nama }}</td>
                                     <td class="text-center">
-                                        <a class="btn btn-info" href="#">Details</a>
+                                        <a class="btn btn-info" href="#">Lihat</a>
                                     </td>
                                 </tr>
                             {% endfor %}
@@ -42,7 +42,7 @@
                                     <td>{{ podcast.judul }}</td>
                                     <td>{{ podcast.nama }}</td>
                                     <td class="text-center">
-                                        <a class="btn btn-info" href="#">Details</a>
+                                        <a class="btn btn-info" href="#">Lihat</a>
                                     </td>
                                 </tr>
                             {% endfor %}
@@ -55,7 +55,7 @@
                                     <td>{{ user_playlist.judul }}</td>
                                     <td>{{ user_playlist.nama }}</td>
                                     <td class="text-center">
-                                        <a class="btn btn-info" href="#">Details</a>
+                                        <a class="btn btn-info" href="#">Lihat</a>
                                     </td>
                                 </tr>
                             {% endfor %}
@@ -64,7 +64,7 @@
                 </table>
             </div>
             <div class="text-center mt-4">
-                <a class="btn btn-secondary" href="/dashboard">Back</a>
+                <a class="btn btn-secondary" href="/dashboard">Kembali</a>
             </div>
         {% else %}
             <div class="text-center">
